src/objects/Hospital_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>AND(
Start_Date__c &lt;= TODAY(),
 OR(
  Expiration_Date__c &gt;= TODAY(),
  ISBLANK(Expiration_Date__c )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Hospital Contracts</relationshipLabel>
        <relationshipName>Hospital_Contracts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>Hospital Contracts</relationshipLabel>
        <relationshipName>Hospital_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Hospital Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Hospital Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospital Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_After_Expiration_Date</fullName>
        <active>true</active>
        <description>Start date can&apos;t be after expiration date</description>
        <errorConditionFormula>Expiration_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorMessage>Expiration date must be after start date.</errorMessage>
    </validationRules>
</CustomObject>